Fix title and layout

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: 'Justin Peterson' # Your Title
-tagline: 'Web developer and hardware enthusiast. Tech Lead @ HubSpot' 
+tagline: 'Tech Lead @ HubSpot' 
 sidebar_image: /images/cover.jpg
 261-image: /images/python-logo.png 
 
